feat: add discussionHandler docs
